# nlp-semantic-reconstruction-2025

./: .gitignore  README.md  pyproject.toml
data/: raw_texts.json
report/: report.md
src/nlp_rewrite/: analysis.py  config.py  dataio.py  run_rewrite.py  viz.py
src/nlp_rewrite/pipelines/: lt_corrector.py  rule_based.py  t5_paraphrase.py
